--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/mistral": "^2.0.1",
-    "@ai-sdk/openai": "^1.0.10",
+    "@ai-sdk/mistral": "^2.0.0",
+    "@ai-sdk/openai": "^2.0.0",
+    "@ai-sdk/provider": "^2.0.0",
+    "@ai-sdk/provider-utils": "^3.0.0",
     "@langchain/textsplitters": "^0.0.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.0",
     "@vercel/kv": "^2.0.0",
-    "ai": "4.0.21",
+    "ai": "^5.0.0",
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.44.4",
     "framer-motion": "^11.3.19",
     "next": "15.0.0-canary.152",
     "next-auth": "5.0.0-beta.21",
     "pdf-parse": "^1.1.1",
+    "pg": "^8.16.3",
     "postgres": "^3.4.4",
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827",
@@ -35,15 +38,16 @@
     "swr": "^2.2.5",
     "use-local-storage": "^3.0.0",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@types/d3-scale": "^4.0.8",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.4",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.24.2",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
