--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/provider": "^2.0.0",
     "@ai-sdk/provider-utils": "^3.0.0",
+    "@ai-sdk/react": "^2.0.8",
     "@langchain/textsplitters": "^0.0.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.0",
